# agents-benchmarking

./: .gitignore  README.md  graph.yaml  main.py  pyproject.toml  requirements.txt  run_experiments.py
app_background/: 3d.md  circuit.md  flightradar.md  graph.md  prompt_template.md  video.md
assets/: circuit_txt_export_snippet.js  gt_all.json
assets/3d_ground_truth/: task1.json  task10.json  task11.json  task12.json  task13.json  task14.json  task15.json  task16.json  task17.json  task18.json  task19.json  task2.json  task20.json  task3.json  task4.json  task5.json  task6.json  task7.json  task8.json
assets/graph_ground_truth/: task1.json  task10.json  task11.json  task12.json  task13.json  task14.json  task15.json  task16.json  task17.json  task18.json  task19.json  task2.json  task20.json  task3.json  task4.json  task5.json  task6.json  task7.json  task8.json  task9.json
assets/video_ground_truth/: tc_vid_001.json  tc_vid_002.json  (+18 more)
computer_use/: README.md  mkdocs.yml  pyproject.toml
computer_use/src/computer_use/: __init__.py  agent.py  browser.py  config.py  main.py  playwright_helpers.py  run_tasks.py  token_tracker.py
computer_use/src/computer_use/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  litellm_provider.py  openai_provider.py
computer_use/test_cases/: graph.yaml
evaluation/: aggregate_seed_runs.py
run_configs/: batch_experiments.3d.run2.json  batch_experiments.circuit.json  batch_experiments.easy.closed_source.json  batch_experiments.example.json  batch_experiments.flightradar.json  batch_experiments.graph.json  batch_experiments.open_source.json  batch_experiments.open_source.mistrallarge.frad.json  batch_experiments.reasoning.json  batch_experiments.size.json  batch_experiments.video.json
scripts/: csv_to_yaml.py  reformat_human_results.py
tasks/: circuit.yaml  clone3d.yaml  flightradar.yaml  voidcut.yaml
test_cases/: circuit.yaml
(+30 files in other folders)
