[tool.poetry]
name = "Agent Evaluation Framework"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Drohomirecki <adroh@softserveinc.com>"]
readme = "README.md"
packages = [
    { include = "agisdk", from = "src" },
    { include = "eval", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.20.0"
pillow = ">=10.0.0,<11.0.0"
gymnasium = "^0.28.0"
playwright = "^1.20.0"
tqdm = "^4.62.0"
python-dotenv = "^0.19.0"
openai = "^1.0.0"
pyparsing = "^3.0.0"
regex = "^2022.0.0"
jmespath = "^1.0.0"
beautifulsoup4 = "^4.10.0"
tiktoken = "^0.3.0"
anthropic = "^0.5.0"
ray = "^2.8.0"
rich = "^14.1.0"
requests = "^2.25.0"
lxml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
