[tool.poetry]
name = "computer-use"
version = "0.1.0"
description = "Claude Computer Use Agent - Interactive browser automation with Claude AI"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "computer_use", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40.0"
playwright = "^1.49.0"
python-dotenv = "^1.0.0"
inquirerpy = "^0.3.4"
rich = "^13.9.0"
pydantic = "^2.10.0"
litellm = "^1.80.10"
boto3 = "^1.42.14"
screeninfo = "^0.8.1"
openai = "^2.26.0"
fire = "^0.7.1"
dotenv = "^0.9.9"
networkx = "^3.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
computer-use = "computer_use.main:main"
run-tasks = "computer_use.run_tasks:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
